Fix DataType conversion error - add data type field to InputColumnField